# Mithrandir

./: .env.example  .env.synology  .gitignore  Dockerfile.backend  Dockerfile.frontend  SYNOLOGY_SETUP.md  TODO.md  docker-compose.yml  mithrandir-spec.md  start.sh
.claude/: settings.local.json
.claude/plans/: hidden-questing-russell.md
.github/workflows/: deploy.yml
backend/: config.py  main.py  ollama_client.py  pyproject.toml
backend/ingestion/: chunker.py  embedder.py  epub_parser.py  ner.py  pdf_parser.py  pipeline.py
backend/models/: database.py  schemas.py  vectorstore.py
backend/query/: citation_formatter.py  context_builder.py  query_engine.py
backend/routers/: battle.py  characters.py  chat.py  library.py  locations.py  system.py  timeline.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ask/: page.tsx
frontend/app/battle/: page.tsx
frontend/app/characters/: page.tsx
frontend/app/characters/[id]/: page.tsx
frontend/app/map/: page.tsx
frontend/app/stream/: route.ts
frontend/app/timeline/: page.tsx
frontend/components/: BookCard.tsx  BookDropZone.tsx  BookMatchModal.tsx  BookPreviewModal.tsx  CharacterCard.tsx  CharacterGraph.tsx  CharacterPromptCards.tsx  ChatInput.tsx  ChatMessage.tsx  ErrorBoundary.tsx  LibraryProgress.tsx  LocationDetailPanel.tsx  MapPin.tsx  Sidebar.tsx  SourceCitation.tsx  Spinner.tsx  TierSection.tsx
frontend/lib/: api.ts  types.ts
